# snugom

./: Cargo.toml  LICENSE  README.md
snugom/: Cargo.toml  README.md
snugom-build/: Cargo.toml
snugom-build/src/: generator.rs  lib.rs  scanner.rs
snugom/.cargo/: config.toml
snugom/docs/: REDISEARCH_ESCAPING_LESSONS.md
snugom/docs/PLAN/: SNUGOM_SCHEMA_VERSIONING_PLAN.md
snugom/examples/: 01_hello_entity.rs  02_belongs_to.rs  03_has_many.rs  04_many_to_many.rs  05_timestamps.rs  06_validation_rules.rs  07_patch_updates.rs  08_search_filters.rs  09_cascade_strategies.rs  10_idempotency_versions.rs  11_run_macro_crud.rs  12_run_macro_nested.rs  13_relation_mutations.rs  14_search_manager.rs  15_unique_constraints.rs  99_social_network_tour.rs
snugom/examples/social_network/: models.rs  repos.rs
snugom/lua/: entity_delete.lua  entity_get_or_create.lua  entity_mutation.lua  entity_patch.lua  entity_upsert.lua  relation_mutation.lua
snugom/src/: errors.rs  id.rs  keys.rs  lib.rs  registry.rs  types.rs  validators.rs
snugom/src/client/: collection.rs  mod.rs  registration.rs
snugom/src/examples/: example01_hello_entity.rs  example02_belongs_to.rs  example03_has_many.rs  example04_many_to_many.rs  example05_timestamps.rs  example06_validation_rules.rs  example07_patch_updates.rs  example08_search_filters.rs  example09_cascade_strategies.rs  example10_idempotency_versions.rs  example11_run_macro_crud.rs  example12_run_macro_nested.rs  example13_relation_mutations.rs  example14_search_manager.rs  example15_unique_constraints.rs  example99_social_network.rs  mod.rs
snugom/src/filters/: mod.rs  normalizers.rs
snugom/src/macros/: mod.rs
snugom/src/repository/: mod.rs
snugom/src/runtime/: commands.rs  executor.rs  mod.rs  scripts.rs
snugom/src/search/: mod.rs
snugom/tests/: auto_timestamps.rs  belongs_to.rs  cascade.rs  client_examples.rs  client_integration.rs  compile_fail_tests.rs  entity_descriptor.rs  get_or_create.rs  has_many.rs  hello_entity.rs  lua_executor.rs  many_to_many.rs  relation_inference.rs  search_derive_tests.rs  search_integration.rs  social_network.rs  upsert.rs  validation.rs
snugom/tests/social_network/: cascade_tests.rs  create_tests.rs  idempotency_tests.rs  run_macro_tests.rs  support.rs
snugom/tests/ui/: collection_on_derive.rs  collection_on_derive.stderr  created_at_on_non_datetime.rs  id_on_non_string.rs  (+70 more)
(+70 files in other folders)
