[package]
name = "snugom"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
nanoid = "0.4"
redis = { version = "0.32", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
thiserror = "2.0"
anyhow = "1.0"
snugom-macros = { path = "../snugom-macros", version = "0.1.0" }
email_address = "0.2"
url = "2.5"
uuid = { version = "1.8", features = ["std", "v4"] }
utoipa = { version = "5.4", optional = true }

[features]
default = []
utoipa = ["dep:utoipa"]

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serial_test = "3.2"
trybuild = "1.0"
